--- a/problem-solving/algos.ipynb
+++ b/problem-solving/algos.ipynb
@@ -2,23 +2,19 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "828e28f9",
+   "id": "f9e86e9e",
    "metadata": {},
    "source": [
-    "# Kadane's Algorithmb"
+    "# Kadane's Algorithm"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66cf040b",
+   "id": "225736c9",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def kadane(iput):\n",
-    "    max_store = 0\n",
-    "    max_"
-   ]
+   "source": []
   }
  ],
  "metadata": {
